content/vault/v1.19.x/content/docs/commands/operator/unseal.mdx
---
layout: docs
page_title: operator unseal - Command
description: |-
  The "operator unseal" allows the user to provide a portion of the root key
  to unseal a Vault server.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-07-01T14:39:24-05:00
last_modified: 2025-07-02T11:30:26-05:00
# END AUTO GENERATED METADATA
---

# operator unseal

The `operator unseal` allows the user to provide a portion of the root key to
unseal a Vault server. Vault starts in a sealed state. It cannot perform
operations until it is unsealed. This command accepts a portion of the master
key (an "unseal key").

The unseal key can be supplied as an argument to the command, but **do not
do this in production**. Argument form is visible in shell history **and** in
process listings (`ps`) for any local user while the command runs—including
when the key is expanded from a subshell such as
`vault operator unseal $(gpg --decrypt key.gpg)`.

```shell-session
$ vault operator unseal IXyR0OJnSFobekZMMCKCoVEpT7wI6l+USMzE3IcyDyo=
```

Prefer an interactive TTY so the key is not passed as an argument:

```shell-session
$ vault operator unseal
Key (will be hidden):
```

For non-interactive unseal (automation, encrypted key files), use the
[unseal HTTP API](/vault/api-docs/system/unseal) and keep the key out of the
process argv—for example POST JSON on stdin with a tool that does not echo
the body into process arguments. Avoid shell command substitution that puts
the key on the CLI.

For more information on sealing and unsealing, see the [seal concepts
page](/vault/docs/concepts/seal).

## Examples

Provide an unseal key:

```shell-session
$ vault operator unseal
Key (will be hidden):
Sealed: false
Key Shares: 1
Key Threshold: 1
Unseal Progress: 0
```

## Usage

The following flags are available in addition to the [standard set of
flags](/vault/docs/commands) included on all commands.

### Output options

- `-format` `(string: "table")` - Print the output in the given format. Valid
  formats are "table", "json", or "yaml". This can also be specified via the
  `VAULT_FORMAT` environment variable.

### Command options

- `-migrate` `(bool: false)` - Indicate that this share is provided with the intent that it is part of a seal migration process.

- `-reset` `(bool: false)` - Discard any previously entered keys to the unseal
  process.
